--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -9,9 +9,9 @@
 	<title>
 	Комментарии на сайте Web-завхоз	</title>
 	<atom:link href="https://web-zavhoz.ru/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>https://web-zavhoz.ru</link>
+	<link>https://web-zavhoz.ru/</link>
 	<description>Частный вебмастер: правки и сопровождение сайтов</description>
-	<lastBuildDate>Mon, 14 Apr 2025 08:26:01 +0000</lastBuildDate>
+	<lastBuildDate>Fri, 18 Apr 2025 11:43:57 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
