--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -11,11 +11,18 @@
 	<atom:link href="https://web-zavhoz.ru/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>https://web-zavhoz.ru/</link>
 	<description>Частный вебмастер: правки и сопровождение сайтов</description>
-	<lastBuildDate>Wed, 04 Jun 2025 10:05:09 +0000</lastBuildDate>
+	<lastBuildDate>Sun, 20 Jul 2025 05:49:02 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
 	1	</sy:updateFrequency>
-	<generator>https://wordpress.org/?v=6.8.1</generator>
+	<generator>https://wordpress.org/?v=6.8.2</generator>
 </channel>
 </rss>
+
+<!--
+Performance optimized by W3 Total Cache. Learn more: https://www.boldgrid.com/w3-total-cache/
+
+
+Served from: web-zavhoz.ru @ 2025-07-20 09:01:34 by W3 Total Cache
+-->
